# orisa

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  generation_program.py  huey.db  manage.py  program.docx  program_1.docx  program_1dayTrip_7 person_06.04.2023.docx  program_Super Trip_10 person_01.04.2023.docx  program_Super Trip_10 person_03.04.2023.docx  program_Super Trip_10 person_06.04.2023.docx  program_Super Trip_10 person_31.03.2023.docx  pyproject.toml  pytest.ini  test.py  ~$rogram.docx
.github/workflows/: build-and-deploy.yml
clients/: admin.py  factories.py  models.py
clients/migrations/: 0001_initial.py
nginx/: nginx.conf
nginx/conf/: nginx.conf
orisa_api/: asgi.py  settings.py  urls.py  wsgi.py
sights/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
sights/migrations/: 0001_initial.py  0002_initial.py  0003_alter_price_adult_price_alter_price_kids_price.py  0004_sight_shared.py  0005_alter_sight_address_alter_sight_contact_phone_and_more.py  0006_alter_price_kids_price.py  0007_alter_price_kids_price_alter_sight_address_and_more.py  0008_alter_price_adult_price_alter_price_kids_price.py  0009_sight_timing.py  0010_rename_kids_price_price_kid_price.py
sights/tests/: test_sight.py
staff/: admin.py  factories.py  models.py  tests.py
staff/migrations/: 0001_initial.py  0002_alter_vehicle_price.py  0003_remove_vehicle_price.py
trips/: admin.py  factories.py  generation_program.py  managers.py  models.py  services.py  tasks.py
trips/migrations/: 0001_initial.py  (+21 more)
(+2 files in other folders)
